build: release version 1.8.0